--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,9 @@
     "dev": "pnpm env:load tsx watch src/http/server.ts",
     "db:migrate": "pnpm env:load prisma migrate dev",
     "db:studio": "pnpm env:load prisma studio",
-    "env:load": "dotenv -e ../../.env --"
+    "env:load": "dotenv -e ../../.env --",
+    "build": "tsc",
+    "start": "node dist/http/server.js"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
@@ -29,6 +31,7 @@
     "@types/node": "^24.3.0",
     "dotenv-cli": "^10.0.0",
     "prisma": "^6.15.0",
+    "tsup": "^8.5.0",
     "tsx": "^4.20.5"
   },
   "prisma": {
